# writeonce

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.MD  README.md  justfile  prompt.md
crates/: README.md
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/http/: Cargo.toml
crates/http/src/: lib.rs
crates/logic/: Cargo.toml
crates/logic/src/: lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/ql/: Cargo.toml
crates/ql/src/: lib.rs
crates/rt/: Cargo.toml
crates/rt/src/: ast.rs  compile.rs  engine.rs  lexer.rs  lib.rs  method.rs  mirror.rs  parser.rs  pg.rs  server.rs  shard.rs  token.rs  wal.rs
crates/rt/src/http/: connection.rs  listener.rs  mod.rs  request.rs  response.rs  route.rs
crates/rt/src/runtime/: eventfd.rs  mod.rs  netpoll_epoll.rs  netpoll_io_uring.rs  scheduler.rs  signalfd.rs  timerfd.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs
crates/sub/: Cargo.toml
crates/sub/src/: lib.rs
crates/txn/: Cargo.toml
crates/txn/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
crates/value/: Cargo.toml
crates/value/src/: lib.rs
crates/wal/: Cargo.toml
crates/wal/src/: lib.rs
crates/wo-event/src/: epoll.rs  timerfd.rs
crates/wo-htmlx/src/: lib.rs  registry.rs  value.rs
crates/wo-http/: Cargo.toml
crates/wo-http/src/: lib.rs  response.rs
crates/wo-index/src/: lib.rs  tags.rs
crates/wo-md/src/: lib.rs
crates/wo-model/: Cargo.toml
crates/wo-model/src/: loader.rs
crates/wo-route/: Cargo.toml
crates/wo-route/src/: pattern.rs
crates/wo-rt/: Cargo.toml
crates/wo-rt/src/: handlers.rs  lib.rs  runtime.rs
crates/wo-seg/: Cargo.toml
crates/wo-seg/src/: header.rs  reader.rs
crates/wo-serve/: Cargo.toml
crates/wo-serve/src/: lib.rs  mime.rs  resolve.rs
crates/wo-sub/: Cargo.toml
docs/: 00-linux.md  01-problem.md  02-recovery.md  03-data.md  04-ui.md  05-datalayer.md  06-markdown-render.md  07-ssl.md  cm.md  writeonce-pl.md
docs/examples/blog/: README.md  api.rest  app.wo  wo.toml
docs/examples/ecommerce/: README.md  api.rest  app.wo  wo.toml
docs/examples/hello/: main.wo
docs/examples/pricing/: README.md  main.wo  wo.toml
docs/future-scope/: ai-agents-content-management.md
docs/plan/: 00-kanban.md  02-event-loop-epoll.md  03-hand-rolled-http.md  04-cutover-remove-tokio-axum.md  05-hand-rolled-json.md  06-bespoke-error.md  07-inotify-content-watcher.md  08-sendfile-static-assets.md  09-concurrency-scaleout.md  10-storage-foundations.md  11-wal-and-recovery.md  12-engine-disk-cutover.md  13-class-model-live-pricing.md  14-mvc-ui-implementation.md  15-mcp-streamable-http.md  16-postgres-mirror.md
docs/plan/assembly/: 01-go-runtime-asm.md  02-writeonce-stance.md
docs/plan/done/: 01-scafolding-crates.md  02-event-loop-epoll.md
docs/plan/linux/: 00-linux.md  01-epoll.md  02-eventfd.md  04-signalfd.md  07-io_uring.md  11-memfd_create.md
docs/plan/ui/: 01-htmlx-format-spec.md  03-client-runtime.md  04-workspace-layout.md  05-per-app-binaries.md  06-shared-db-daemon.md
docs/runtime/: async.md  database.md  fibers.md  garbage-collection.md  surreal-case-study.md  wo-language.md
docs/runtime/database/: 01-evaluation.md  02-wo-language.md  (+5 more)
infra/: deploy.sh  setup.sh  sync.sh  writeonce.de.nginx  writeonce.service
prototypes/wo-db/: README.md
prototypes/wo-rt-c/: Makefile  README.md  wo-rt.c
reference/: README.md
reference/crates/: .gitignore  Cargo.toml
reference/crates/wo-event/: Cargo.toml
reference/crates/wo-event/src/: eventfd.rs  lib.rs  signalfd.rs
reference/crates/wo-htmlx/: Cargo.toml
reference/crates/wo-htmlx/src/: ast.rs  parser.rs  render.rs
reference/crates/wo-http/src/: connection.rs  listener.rs  request.rs
reference/crates/wo-index/: Cargo.toml
reference/crates/wo-index/src/: date.rs  title.rs
reference/crates/wo-md/: Cargo.toml
reference/crates/wo-md/src/: block.rs  highlight.rs  inline.rs
reference/crates/wo-model/src/: article.rs  lib.rs
reference/crates/wo-route/src/: lib.rs  router.rs
reference/crates/wo-rt/src/: config.rs  main.rs
reference/crates/wo-seg/src/: lib.rs  writer.rs
reference/crates/wo-serve/src/: sendfile.rs
reference/crates/wo-store/: Cargo.toml
reference/crates/wo-store/src/: lib.rs
reference/crates/wo-sub/src/: lib.rs
reference/crates/wo-watch/: Cargo.toml
reference/crates/wo-watch/src/: lib.rs
reference/rest/: README.md  blog.rest  ecommerce.rest
reference/writeonce-app/: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile-Dev  README.md  UI_ENHANCEMENT.md  angular.json  deploy.sh  docker-compose.yml  package.json  tsconfig.json
static/styles/: code-theme.css
templates/: about.htmlx  article.htmlx  contact.htmlx  footer.htmlx  header.htmlx  home.htmlx  layout.htmlx
templates/components/: article-card.htmlx
templates/styles/: main.css
writeonce-articles-s3/auto-scale-gitlab-runner-using-aws-spot-instance/: docker-machine-test-with-t2.md  gitlab-runner-config.md  stop-test-gitlab-docker-machine.md
writeonce-articles-s3/aws-lambda-pulumi/: aws-lambda-pulumi.json  pulumi.md
writeonce-articles-s3/gitlab-runner-with-kubernetes-executor/: deploy.md  gitlab-runner-with-kubernetes-executor.json  gitlab-runnergitlab-runner-deploy.md  permission.md  role-binding.md  role-defination.md
writeonce-articles-s3/linux-misc/: ffmpeg.md  linux-misc.json  troubleshoot.md  wireguard.md
writeonce-articles-s3/machine-learninig-probability-distribution/: machine-learning-probability-distribution.json  pulumi-login.md
(+116 files in other folders)
