[package]
name        = "rt"
version = "0.1.0"
edition = "2021"
description = "writeonce runtime — the `.wo` language engine (v2, Phase 2+ design)"

[lib]
name = "rt"
path = "src/lib.rs"

[[bin]]
name = "wo"
path = "src/bin/wo.rs"

[dependencies]
anyhow     = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
libc       = "0.2"   # phase 02 — direct epoll/eventfd/timerfd/signalfd syscalls

[dev-dependencies]
tempfile = "3"
