[package]
name = "wo-sub"
version = "0.1.0"
edition = "2021"

[dependencies]
wo-model = { path = "../wo-model" }
wo-store = { path = "../wo-store" }
wo-event = { path = "../wo-event" }
libc = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
